refact: making files better to read